- ブラウザのサイズを取得する方法を変更   - 関連するissue: #1 - 生成するHTMLを修正   - UTF-8 BOMを追加   - 改行を追加   - #1 対応 - 例外エラーの変数名をerrからexに変更 - バージョンを0.2にアップ

--- a/src/popup.html
+++ b/src/popup.html
@@ -28,8 +28,7 @@
         <span><b>Cookie:</b></span> <span id="cookieEnableLabel"></span><Br />
         <span><b>Language:</b></span> <span id="languageLabel"></span><br />
         <span><b>Screen:</b></span> <span id="screenLabel"></span><br />
-        <span><b>Browser Screen:</b></span> <span id="outerSizeLabel"></span><br />
-        <span><b>Browser Inner Screen:</b></span> <span id="innerSizeLabel"></span><br />
+        <span><b>Browser Screen:</b></span> <span id="browserScreenLabel"></span><br />
         <span><b>User Agent:</b></span><br />
         <span id="userAgentLabel"></span><br />
         <span><b>Screen Shot:</b></span><br />
